cmake_minimum_required(VERSION 3.13)

# initialize pico-sdk from GIT
# (note this can come from environment, CMake cache etc)
set(PICO_SDK_FETCH_FROM_GIT on)

# pico_sdk_import.cmake is a single file copied from this SDK
# note: this must happen before project()
include(pico_sdk_import.cmake)

project(my_project)

# initialize the Raspberry Pi Pico SDK
pico_sdk_init()

# rest of your project
add_executable(plant_timer
    plant_timer.c
)

# Add pico_stdlib library which aggregates commonly used features
target_link_libraries(plant_timer pico_stdlib)

# create map/bin/hex/uf2 file in addition to ELF.
pico_add_extra_outputs(plant_timer)

pico_enable_stdio_usb(plant_timer 1)
pico_enable_stdio_uart(plant_timer 0)